Fixing alignment

--- a/nx/blocks/loc/dashboard/project-table.css
+++ b/nx/blocks/loc/dashboard/project-table.css
@@ -28,10 +28,9 @@
   word-wrap: break-word;
   min-height: 66px;
   box-sizing: border-box;
-  text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
 }
 
 .table-header .table-cell {
